--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.Trabajo_finalT3"
         tools:targetApi="31">
         <activity
-            android:name="com.example.trabajo_finalt3.ui.MainActivity"
+            android:name="com.example.trabajo_final_t3.ui.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
